# of-scraper-rs

./: Cargo.toml  README.md  config.conf-example
.github/workflows/: build.yaml
of-client/: Cargo.toml
of-client/src/: lib.rs  rules.rs
of-client/src/structs/: content.rs  media.rs  user.rs
src/: downloader.rs  main.rs  tui.rs
src/tui/: app.rs  mod.rs  types.rs
src/tui/screens/: content_select.rs  donate.rs  like_direction.rs  like_options.rs  liking.rs  link_input.rs  main_menu.rs  mod.rs  next_action.rs  scraping.rs  user_select.rs
src/tui/widgets/: checklist.rs  fuzzy_select.rs  list_select.rs  mod.rs  text_input.rs
